# cipherpowers

./: .gitignore  2025-10-20-batch-1-review.md  2025-10-20-batch-2-review.md  2025-10-20-batch-3-review.md  2025-10-20-batch-4-5-review.md  2025-10-20-batch-6-final-review.md  2025-10-20-review-batch-1.md  2025-10-20-review-batch-2.md  2025-10-20-review-batch-3.md  2025-10-20-review-batch1-workflow-migration.md  AGENTS.md  CLAUDE.md  README.md  math.rs  mise.toml  multi_issue.rs  unchecked.rs
.claude-plugin/: marketplace.json  plugin.json
.codex/: INSTALL.md  README.md  cipherpowers-bootstrap.md  cipherpowers-codex
.serena/: project.yml
.work/: 2025-11-21-review-2.md  2025-11-21-review.md  2025-11-25-review-2.md  2025-11-25-review-3.md  2025-11-25-skill-pattern-review.md  2025-11-26-exclusive-issues-verified.md  2025-11-26-review-1.md  2025-11-27-plan-verify-collated.md  skills-invocation-research.md
agents/: code-committer.md  code-reviewer.md  doc-reviewer.md  rust-engineer.md  work-orchestrator.md  work-planner.md
commands/: code-review.md  commit.md  doc-review.md  summarise.md  work.md
commands_all/: analyse.md  fix-review.md  plan.md  recommend.md  summarise.md  (+1 more)
plugin/tools/workflow/: .gitignore  Cargo.toml  DEPRECATION.md  MIGRATION.md  README.md  run
plugin/tools/workflow/examples/: enforcement.md  guided.md  simple-new-syntax.md  simple.md  test.md
plugin/tools/workflow/src/: execution_mode.rs  executor.rs  lib.rs  main.rs  models.rs  parser.rs  runner.rs
plugin/tools/workflow/tests/: helpers.rs  implicit_defaults_test.rs  integration_test.rs
(+425 files in other folders)
