[package]
name = "workflow"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "workflow"
path = "src/main.rs"

[dependencies]
pulldown-cmark = "0.9"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crossterm = "0.27"
